Fix overflowed menus

--- a/src/styles.scss-theme.scss
+++ b/src/styles.scss-theme.scss
@@ -24,6 +24,7 @@
 @include global-theme($orcid-app-theme);
 @include global-theme-typography($orcid-material-typography);
 
-.mat-menu-panel {
-  overflow: hidden !important;
-}
+// TODO @leomendoza123 check why this was problematic on explorer
+// .mat-menu-panel {
+//   overflow: hidden !important;
+// }
